Content와 관련된 location Dto를 통해 List로 받도록 설정